refactor(model): замена isEmpty() на isBlank(), добавление final к переменным конструктора